----------------------------------------------------------------------
  Copyright (c) 2003, 2004 Daan Leijen.

  See license.txt for details.
----------------------------------------------------------------------

Version 0.7.1
-------------
Not backward compatible changes:
- Added wildcards argument to the "fileSaveDialog" function.
- Removed to call to "buttonSetDefault" in the "defaultButton" 
  property since GTK seems to enlarge the button in that case.
- Removed alignment argument for text controls
- Removed sorted and labels argument for choice and combo boxes.
- Removed sorted argument for listboxes.
- Added default "stretch" to every toplevel layout, assuring that
  such layout gets at least all available space assigned.
- (un)set "maximize box" when "resizeable" is set.

Backward compatible additions:
- Added "changes.txt" file :-)
- Added "HAS_RADIO_MENU_ITEMS" to "isDefined".
- Added support for radio menu items.
- New wxHaskell+HOpenGL sample added to the contributions. Thanks
  to Shelarcy and Sean Seefried.
- Added "Align" and "Wrapped" classes to set alignment
  and wrap mode for text controls.
- Added "Sorted" class to set the sort mode of choice, combo box,
  and listbox controls.
- Added "creation time" attributes that use reflective attributes
  not compositional (and thus not so nice), but very convenient!
- Added "entry" as shorthand for "textEntry"
- Added "SystemColor" and "colorSystem" to get standard system colors.
- Defaulted background color of "Frame"s to Color3DFace (as a Panel).
- Made the definition of "Closure" in "wrappers.h" more liberal to 
  support wxOCaml better.

Bug fixes:
- Fixed bug that crashed wxHaskell when a tree control had the focus
  and a key was pressed. Thanks to Olivier Spier for sending a fix.
- The "item" attribute of a list control always returned the first
  item and disregarded the parameter. Thanks to Olivier Spier for 
  sending a fix.

